--- a/myqwe/code/html/index.html
+++ b/myqwe/code/html/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
    	 <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+   	 <title>千微商城-乡下货</title>
    	 <link rel="stylesheet" type="text/css" href="../css/ui-base.css">
    	 <link rel="stylesheet" type="text/css" href="../css/index.css">
-   	 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 </head>
 <body>
-	<div class="ub ub-ver">
+	<div class="ub ub-ver padb-70">
 		<!-- 头部 -->
 		<div class="ub ub-ac ub-pc bg-wh  h-44">
 			<div class="ub ub-ac ub-pc">
-				<div class="icon-map-marker marl-10 marr-5 tx-green-1 tx-22" style="position: relative;bottom:3px;"></div>
+				<div class="marl-10 marr-5 address-icon"></div>
 				<div class="tx-16 tx-bla">全国</div>
 			</div>
 			<div class="ub-f1 ub uc-15 bg-gra marr-10 marl-10  h-30 padr-15 padl-35 inputNode">
@@ -45,7 +45,7 @@
 							<a href="#"><img _src="http://img2.imgtn.bdimg.com/it/u=3750295522,2600168228&fm=11&gp=0.jpg" /></a>
 						</li>
 						<li>
-							<a href="#"><img _src="http://www.tendynet.com/upload/img/oYLZjYROxtSw3hfPpivZJJHudIpIuvRZ7HpoUT8MUAxSRJawb3lhexbKeN6W9Hqjb6PJS1CKmcJuTF13zVBqUNh2/SCAsQ.jpg" /></a>
+							<a href="#"><img  _src="http://img3.imgtn.bdimg.com/it/u=3036382510,1307879637&fm=11&gp=0.jpg" /></a>
 						</li>
 		    			</ul>
 		    		</div>
@@ -89,7 +89,6 @@
 	    				<div class="tx-14 tx-bla-2 mart-5">农资</div>
 	    			</li>
 	    		</div>
-    			
 	    	</div>
 	    	<!-- 闪购 -->
 	    	<div class="ub ub-ver bg-wh mart-5 bort-gra-1 borb-gra-1">
@@ -155,6 +154,36 @@
 	    							</div>
 	    						</div>
 	    					</li>
+	    					<li class="nav" >
+	    						<div class="ub ub-ver marl-5 mart-10 marb-5">
+	    							<div class="shortBuyProduct bgimg" style="background-image: url(http://img3.imgtn.bdimg.com/it/u=2821856606,1324541851&fm=21&gp=0.jpg)"></div>
+	    							<div class="tx-12 tx-bla-3 word-break tx-moreclip-2 tx-l mart-5">牛腱子500g肉牛肉酱牛肉2份含邮</div>
+	    							<div class="ub mart-5">
+	    								<div class="ut-s tx-yellow tx-l marr-5">¥50</div>
+	    								<div class="ub-f1 ut-s tx-bla-3 line-th tx-l">70</div>
+	    							</div>
+	    						</div>
+	    					</li>
+	    					<li class="nav" >
+	    						<div class="ub ub-ver marl-5 mart-10 marb-5">
+	    							<div class="shortBuyProduct bgimg" style="background-image: url(http://img3.imgtn.bdimg.com/it/u=2821856606,1324541851&fm=21&gp=0.jpg)"></div>
+	    							<div class="tx-12 tx-bla-3 word-break tx-moreclip-2 tx-l mart-5">牛腱子500g肉牛肉酱牛肉2份含邮</div>
+	    							<div class="ub mart-5">
+	    								<div class="ut-s tx-yellow tx-l marr-5">¥50</div>
+	    								<div class="ub-f1 ut-s tx-bla-3 line-th tx-l">70</div>
+	    							</div>
+	    						</div>
+	    					</li>
+	    					<li class="nav" >
+	    						<div class="ub ub-ver marl-5 mart-10 marb-5">
+	    							<div class="shortBuyProduct bgimg" style="background-image: url(http://img3.imgtn.bdimg.com/it/u=2821856606,1324541851&fm=21&gp=0.jpg)"></div>
+	    							<div class="tx-12 tx-bla-3 word-break tx-moreclip-2 tx-l mart-5">牛腱子500g肉牛肉酱牛肉2份含邮</div>
+	    							<div class="ub mart-5">
+	    								<div class="ut-s tx-yellow tx-l marr-5">¥50</div>
+	    								<div class="ub-f1 ut-s tx-bla-3 line-th tx-l">70</div>
+	    							</div>
+	    						</div>
+	    					</li>
 	    				</ul>
 	    			</div>
 	    		</div>
@@ -170,13 +199,13 @@
 	    			</div>
 	    		</div>
 	    		<div class="ub mart-5 marb-5 marl-3 marr-3 bg-wh">
-	    			<div class="ub-f1 h-200 bgimg" style="background-image: url(../images/img1.png)"></div>
-	    			<div class="ub-f1 h-200 marl-5 bgimg" style="background-image: url(../images/img1.png)"></div>
+	    			<div class="ub-f1 h-200 bgimg" style="background-image: url(../images/village01.png)"></div>
+	    			<div class="ub-f1 h-200 marl-5 bgimg" style="background-image: url(../images/village01.png)"></div>
 	    		</div>
 	    	</div>
 	    	<!-- 新鲜货 -->
 	    	<div class="ub ub-ver bg-wh mart-10 padl-10 padr-10 bort-gra-1 borb-gra-1">
-	    		<div class="ub ub-ac ub-pc bg-wh">
+	    		<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5">
 	    			<div class="ub-f1  centerLine"></div>
 	    			<div class="newGood-icon"></div>
 	    			<div class="tx-18 tx-db tx-bla">新鲜货</div>
@@ -184,36 +213,158 @@
 	    		</div>
 	    		<div class="ub ub-ver marb-5 bg-wh">
 	    			<div class="ub">
-	    				<div class="ub-f1 marr-10 h-150 bgimg" style="background-image: url(../images/product01.png)"></div>
-	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/product02.png)"></div>
+	    				<div class="ub-f1 marr-10 h-150 bgimg" style="background-image: url(../images/newGood01.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/newGood02.png)"></div>
 	    			</div>
 	    			<div class="ub mart-10">
-	    				<div class="ub-f1 marr-10 h-150 bgimg" style="background-image: url(../images/product03.png)"></div>
-	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/product04.png)"></div>
+	    				<div class="ub-f1 marr-10 h-150 bgimg" style="background-image: url(../images/newGood03.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/newGood04.png)"></div>
 	    			</div>
 	    			<div class="ub mart-10">
-	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/product05.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/newGood05.png)"></div>
 	    			</div>
 	    		</div>
 	    	</div>
 	    	<!-- 新鲜果蔬 -->
-	    	<div class="ub ub-ver bg-wh mart-10 padl-10 padr-10 bort-gra-1 borb-gra-1">
-	    		<div class="ub ub-ac ub-pc bg-wh">
+	    	<div class="ub ub-ver bg-wh mart-10  bort-gra-1 borb-gra-1">
+	    		<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5 padl-10 padr-10">
 	    			<div class="ub-f1  centerLine"></div>
 	    			<div class="newFruit-icon"></div>
 	    			<div class="tx-18 tx-db tx-red-1">新鲜果蔬</div>
 	    			<div class="ub-f1 marl-5  centerLine"></div>
 	    		</div>
-	    		<div class="ub ub-ver marb-5 bg-wh">
+	    		<div class="ub ub-ver bg-wh">
 	    			<div class="ub">
-	    				<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/product09.png)"></div>
+	    				<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/vegetables01.png)"></div>
 	    			</div>
 	    			<div class="ub mart-10">
-	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/product07.png)"></div>
-	    				<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/product08.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/vegetables02.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/vegetables03.png)"></div>
 	    			</div>
 	    		</div>
 	    	</div>
+	    	<!--海鲜水产  -->
+	    	<div class="ub ub-ver bg-wh mart-10 bort-gra-1 borb-gra-1">
+	    		<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5 padl-10 padr-10">
+	    			<div class="ub-f1  centerLine"></div>
+	    			<div class="seaFood-icon"></div>
+	    			<div class="tx-18 tx-db tx-blue-1">海鲜水产</div>
+	    			<div class="ub-f1 marl-5  centerLine"></div>
+	    		</div>
+	    		<div class="ub ub-ver">
+	    			<div class="ub">
+	    				<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/seaFood01.png)"></div>
+	    			</div>
+	    			<div class="ub mart-10">
+	    				<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/seaFood02.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/seaFood03.png)"></div>
+	    				<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/seaFood04.png)"></div>
+	    			</div>
+	    		</div>
+	    	</div>
+		<!-- 禽肉蛋类 -->
+		<div class="ub ub-ver bg-wh mart-10 bort-gra-1 borb-gra-1">
+			<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5 padl-10 padr-10">
+				<div class="ub-f1  centerLine"></div>
+				<div class="birds-icon"></div>
+				<div class="tx-18 tx-db tx-green-2">禽肉蛋类</div>
+				<div class="ub-f1 marl-5  centerLine"></div>
+			</div>
+			<div class="ub ub-ver">
+				<div class="ub">
+					<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/escape01.png)"></div>
+				</div>
+				<div class="ub mart-10">
+					<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/escape02.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/escape03.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/escape04.png)"></div>
+				</div>
+				<div class="ub bort-gra-1">
+					<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/escape05.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/escape06.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/escape07.png)"></div>
+				</div>
+			</div>
+		</div>
+		<!-- 猪牛羊肉 -->
+		<div class="ub ub-ver bg-wh mart-10 bort-gra-1 borb-gra-1">
+			<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5 padl-10 padr-10">
+				<div class="ub-f1  centerLine"></div>
+				<div class="cow-icon"></div>
+				<div class="tx-18 tx-db tx-red-1">猪牛羊肉</div>
+				<div class="ub-f1 marl-5  centerLine"></div>
+			</div>
+			<div class="ub ub-ver">
+				<div class="ub">
+					<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/cow01.png)"></div>
+				</div>
+				<div class="ub mart-10">
+					<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/cow02.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/cow03.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/cow04.png)"></div>
+				</div>
+			</div>
+		</div>
+		<!--  粮油调味-->
+		<div class="ub ub-ver bg-wh mart-10 bort-gra-1 borb-gra-1">
+			<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5 padl-10 padr-10">
+				<div class="ub-f1  centerLine"></div>
+				<div class="oil-icon"></div>
+				<div class="tx-18 tx-db tx-orange-1">粮油调味</div>
+				<div class="ub-f1 marl-5  centerLine"></div>
+			</div>
+			<div class="ub ub-ver">
+				<div class="ub">
+					<div class="ub-f1 h-75 bgimg" style="background-image: url(../images/oil01.png)"></div>
+				</div>
+				<div class="ub mart-10">
+					<div class="ub-f1 h-150 bgimg" style="background-image: url(../images/oil02.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/oil03.png)"></div>
+					<div class="ub-f1 h-150 bgimg borl-gra-1" style="background-image: url(../images/oil04.png)"></div>
+				</div>
+			</div>
+		</div>
+		<!-- 地方农店 -->
+		<div class="ub ub-ver bg-wh mart-10 padl-10 padr-10 bort-gra-1 borb-gra-1 padb-15">
+			<div class="ub ub-ac ub-pc bg-wh padt-5 padb-5">
+				<div class="ub-f1  centerLine"></div>
+				<div class="farmShop-icon"></div>
+				<div class="tx-18 tx-db tx-bla">地方农店</div>
+				<div class=" ub-f1 marl-5  centerLine"></div>
+				<div class="tx-12 tx-bla-3 more-farmshop">更多农店  <i>></i></div>
+			</div>
+			<div class="ub ub-ver marb-5 bg-wh">
+				<div class="ub">
+					<div class="ub-f1 marr-10 h-200 bgimg bora-gra-1" style="background-image: url(../images/farmShop01.png)"></div>
+					<div class="ub-f1 h-200 bgimg bora-gra-1" style="background-image: url(../images/farmShop02.png)"></div>
+				</div>
+				<div class="ub mart-10">
+					<div class="ub-f1 marr-10 h-200 bgimg bora-gra-1" style="background-image: url(../images/farmShop03.png)"></div>
+					<div class="ub-f1 h-200 bgimg bora-gra-1" style="background-image: url(../images/farmShop04.png)"></div>
+				</div>
+			</div>
+		</div>
+		<!-- 底部菜单 -->
+		<div class="foolterNav bort-gra-1">
+			<div class="ub ub-ac ub-pc mh-100 mw-100 padt-5 padb-5">
+				<div class="ub-f1 ub ub-ver ub-ac ub-pc bottomNav">
+					<div class="mobileShop-icon"></div>
+					<div class="tx-12 tx-bla-2">移动商城</div>
+				</div>
+				<div class="ub-f1 ub ub-ver ub-ac ub-pc active bottomNav">
+					<div class="village-icon"></div>
+					<div class="tx-12 tx-bla-2">乡下货</div>
+				</div>
+				<div class="ub-f1 ub ub-ver ub-ac ub-pc bottomNav">
+					<div class="shoppingCart-icon"></div>
+					<div class="tx-12 tx-bla-2">购物车</div>
+				</div>
+				<div class="ub-f1 ub ub-ver ub-ac ub-pc bottomNav">
+					<div class="my-icon"></div>
+					<div class="tx-12 tx-bla-2">我的</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 <script type="text/javascript" src="../js/sea.js"></script>
@@ -241,7 +392,7 @@
 		/*限时闪购滚动-结束*/
 		/*限时闪购时间-开始*/
 		function countDown(hourDOM,minutesDOM,secondsDOM){
-				var endTime=new Date('2016/6/14,17:00:00').getTime();//结束时间
+				var endTime=new Date('2016/7/14,17:00:00').getTime();//结束时间
 				var nowTime=new Date().getTime();//开始时间
 				var rest=parseInt((endTime-nowTime)/1000);
 				var hour,minuts,seconds;
